update Cantonese version songs

--- a/letitgo_multilang.html
+++ b/letitgo_multilang.html
@@ -17,7 +17,7 @@ First name: <input type="text" name="search" value="beauty">
 <img src="http://static3.businessinsider.com/image/51c3211b69bedd8843000023-480/black-hole.jpg" alt="good view" width="500" height="300">
 </a>
 -->
-
+<iframe width="640" height="360" src="http://www.youtube.com/embed/hHoyjg027WU?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
 <iframe width="640" height="360" src="http://www.youtube.com/embed/moSFlvxnbgk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
 <iframe width="640" height="360" src="http://www.youtube.com/embed/wQP9XZc2Y_c?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
 <iframe width="640" height="360" src="http://www.youtube.com/embed/R-f6Mrlt1Jw" frameborder="0" allowfullscreen></iframe>
